some spacing fixes

--- a/src/styles/editor.module.scss
+++ b/src/styles/editor.module.scss
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 8fr;
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  height: 100%;
 }
 
 .viewer {
@@ -18,5 +18,7 @@
   grid-column: 1;
 }
 
-.chat {
+.canvas {
+  background-color: lightblue;
+  border-radius: 0.5rem;
 }
